--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,31 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+:root {
+    --color1: #14213d;
+    --color2: #000000;
+    --color3: #e5e5e5;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+::-webkit-scrollbar {
+    width: 10px;
+  } 
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(58, 26, 26, 0.4);
+    border-radius: 5px;
   }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(58, 26, 26, 0.6);
   }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  ::-webkit-scrollbar-thumb:active {
+    background-color: rgba(58, 26, 26, 1);
   }
-}
+  
+  * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+  }
+  
+  html, body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+      overflow: hidden;
+  }
+  
